Parser for AnyBurl rules - java minimum requirements (9)